Bug 992879 - Folders created with a colon (:) in Tb24 on linux are duplicated with hash names on startup with Tb trunk or earlier, breaking feeds. r=Standard8